# d3b-data-transfer-pipeline

./: .gitignore  README.md
.github/workflows/: ci.yml
d3b-data-transfer-cli/: README.md  pyproject.toml
d3b-data-transfer-cli/d3b_data_transfer_cli/: __init__.py
d3b-data-transfer-cli/d3b_data_transfer_cli/cli/: __init__.py
d3b-data-transfer-cli/d3b_data_transfer_cli/cli/dewrangle/: __init__.py
d3b-data-transfer-cli/d3b_data_transfer_cli/config/: __init__.py  log.py
d3b-data-transfer-cli/d3b_data_transfer_cli/utils/: __init__.py
d3b-data-transfer-cli/tests/: __init__.py
d3b-data-transfer-cli/tests/integration/: test_something.py
d3b-data-transfer-cli/tests/unit/: test_something.py
deployment/: README.md  batch.tf  iam.tf  secret.tf  sfn.tf  slack_notifications.tf  variables.tf  versions.tf
deployment/.github/workflows/: bc_check.yml  terraform_fmt.yml  yor.yml
deployment/chopd3bPrd/us-east-1/dev/: backend.conf  variables.tfvars
deployment/job-definitions/: transfer-pipeline.json.tmpl
deployment/scripts/: build_image  infra
deployment/step-functions/: dff.json.tmpl  step_fn.json.tmpl
docs/: contributing.md  developer-guide.md  deveoper-guide.md
